Prevent logo from overlapping ads field on mobile devices — closes #222

--- a/theme-content/scss/layout/_header.scss
+++ b/theme-content/scss/layout/_header.scss
@@ -114,7 +114,7 @@
         margin: $_u4 0;
 
         img{
-            max-height: 100px !important;
+            max-height: 100%;
         }
     }
 }
